Silence JDK warnings in Ant builds [0]
This removes command line arguments from jar.runlarge.jpms and
jar.runscript.jpms.